project/logs/20251006_161024.log
アプリ開始
Use Adapter: NVIDIA GeForce RTX 4060 Laptop GPU

D3D12CreateDevice OK (FeatureLevel: 12.2)
Complete Create Device
Complete Create Commands
Complete Create SwapChain
Complete Create HeapAndTargetView
Complete Create Fence
Complete Create D3D12Device!!!
Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Compile Succeeded, path:Object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object3D.PS.hlsl, profile:ps_6_0

Compile Succeeded, path:Object3D.PS.hlsl, profile:ps_6_0

Begin CompileShader, path:Object2D.VS.hlsl, profile:vs_6_0

Object2D.VS.hlsl:19:43: warning: implicit truncation of vector type [-Wconversion]
    output.position = mul(input.position, gSpriteTransformation.WVP);
                                          ^
Object2D.VS.hlsl:19:21: warning: implicit truncation of vector type [-Wconversion]
    output.position = mul(input.position, gSpriteTransformation.WVP);
                    ^
error: validation errors
error: SV_Position must be float4.
Object2D.VS.hlsl:16: error: Not all elements of SV_Position were written.
Validation failed.


